# methane-detection

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
