[project]
name = "methane-detection"
version = "0.1.0"
description = "MLOps pipeline for semantic segmentation of methane plumes on hyperspectral imagery"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "torch>=2.5",
    "lightning>=2.3",
    "segmentation-models-pytorch",
    "georeader-spaceml",
    "rasterio",
    "kornia",
    "dvc[gdrive]",
    "mlflow",
    "hydra-core",
    "omegaconf",
    "wandb",
    "pytest",
    "pytest-cov",
    "bentoml",
    "prefect",
]

[tool.uv]
package = false
