[project]
name = "methane-detection"
version = "0.1.0"
description = "MLOps pipeline for semantic segmentation of methane plumes on hyperspectral imagery"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "torch>=2.5",
    "lightning>=2.3",
    "segmentation-models-pytorch",
    "georeader-spaceml",
    "rasterio",
    "kornia",
    "dvc[gdrive]",
    "mlflow",
    "hydra-core",
    "omegaconf",
    "wandb",
    "pytest",
    "pytest-cov",
    "bentoml",
    "prefect",
]

[dependency-groups]
dev = [
    "python-semantic-release>=9",
]

[tool.uv]
package = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"